** Create virtual lines: lines to group elements in tree with criteria based on attributes values or on user query.
** Have columns unrelated to root element: for example, in Cross Table, columns targeting Ecore features to have a table with a dynamic number of columns.
** Store states to alter tools: read/write mode driven by tools; default values to use in creation tools of current table.

h3. Developer-Visible Changes

* <span class="label label-danger">Removed</span> AbstractTabbarContributor.createCopyAppearancePropertiesContribution and TabbarContributionFactory.createCopyAppearancePropertiesContribution has been removed.
* <span class="label label-success">Added</span> The SiriusStyleClipboard singleton to store the style clipboard data for the diagram elements.
* <span class="label label-success">Added</span> The ISimpleAuthorityListener functional interface to listen for any lock change, like IAuthorityListener but with a single method.
* <span class="label label-info">Modified</span> ArrangeBorderNodesAction.initAction now has two parameters for its text: when there is no selection, when there is a selection.

h4. Changes in @org.eclipse.sirius@

* <span class="label label-success">Added</span> @org.eclipse.sirius.business.api.logger.InterpretationContext@ is created to ease setting and clearing variables when interpreting expressions.

h4. Changes in @org.eclipse.sirius.table@

* <span class="label label-success">Added</span> @org.eclipse.sirius.table.business.api.helper.TableVariablesHelper@ is added to initialize variable value according active table decorator.
* <span class="label label-success">Added</span> @org.eclipse.sirius.table.business.api.helper.TableToolHelper@ is added to handle common evaluations with table tools.