@@ -1430,7 +1430,18 @@
 				<em>Size Computation Expression</em> if specified.
 			</li>
 			<li>
-				<em>Size Computation Expression</em>: An expression used to dynamically compute the size of a graphical element. It is evaluated in the context of the target element, and should return an integer.
+				<em>Size Computation Expression</em>: An expression used to dynamically compute the size of a graphical element. It is evaluated in the context of the target element, and should return an integer. By default, the value 3 is used to define a size of 30 pixels for the graphic element. 
+				<ul>
+					<li>For Containers, the -1 value can be used to enable the &#8220;auto size&#8221; mode at creation time, it works for all styles applicable to Containers.</li>
+					<li>For WorkspaceImage style, set -1 as Size Computation Expression to use the size of the image as the size of the graphic element.</li>
+					<li>For Nodes, a positive integer is expected.
+						<ul>
+							<li>There is a special case with Square Style and label position set to 
+								<em>node</em>. Having -1 in both width and height will allow to auto-size the node according the size of the label. The size computation expression will be the minimum size.
+							</li>
+						</ul>
+					</li>
+				</ul>
 			</li>
 			<li>
 				<em>Border Size Computation Expression</em>: An expression which is used to dynamically compute the size of the border of graphical element. It is evaluated in the context of the target element, and should return the border size 
