@@ -27,6 +27,7 @@ h3. Specifier-Visible Changes
 ** Create virtual lines: lines to group elements in tree with criteria based on attributes values or on user query.
 ** Have columns unrelated to root element: for example, in Cross Table, columns targeting Ecore features to have a table with a dynamic number of columns.
 ** Store states to alter tools: read/write mode driven by tools; default values to use in creation tools of current table.
+* <span class="label label-info">Modified</span> The SquareDescription can now have -1 value for height and width. If the value -1 is used for both width and height enable the "auto-size" mode.
 
 h3. Developer-Visible Changes
 
@@ -34,6 +35,9 @@ h3. Developer-Visible Changes
 * <span class="label label-success">Added</span> The SiriusStyleClipboard singleton to store the style clipboard data for the diagram elements.
 * <span class="label label-success">Added</span> The ISimpleAuthorityListener functional interface to listen for any lock change, like IAuthorityListener but with a single method.
 * <span class="label label-info">Modified</span> ArrangeBorderNodesAction.initAction now has two parameters for its text: when there is no selection, when there is a selection.
+* <span class="label label-success">Added</span> Method @org.eclipse.sirius.diagram.business.api.diagramtype.IDiagramDescriptionProvider.allowsAutoSizeNodeStyle(DNode)@ has been added to indicates if a diagram description provider allows node auto-size mode computed from the node style on the specified element.
+* <span class="label label-success">Added</span> Method @org.eclipse.sirius.diagram.business.api.query.DNodeQuery.isAutoSize()@ has been added to indicates if a node is in auto-size mode.
+* <span class="label label-success">Added</span> Method @org.eclipse.sirius.diagram.business.api.query.DNodeQuery.supportNodeStyleAutoSize(NodeStyle, NodeStyleDescription)@ has been added to indicates if a DNode can support autosize mode defined from its style.
 
 h4. Changes in @org.eclipse.sirius@
 
